--- a/package.json
+++ b/package.json
@@ -4,5 +4,16 @@
   "description": "Custom elements for using Intl APIs declaratively.",
   "main": "dist/index.js",
   "author": "zacky@marchbox.com",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "build": "tsc",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.2.2",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
+  }
 }
