--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@types/jest": "^29.2.2",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
