--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
   "include": [
     "src/"
   ],
+  "exclude": [
+    "src/**/*.spec.ts",
+    "node_modules"
+  ],
   "compilerOptions": {
     "target": "es2015",
     "module": "es2015",
