--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "intl-elements",
   "version": "0.0.0",
   "description": "Custom elements for using Intl APIs declaratively.",
-  "main": "dist/index.js",
   "author": "zacky@marchbox.com",
   "license": "MIT",
   "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "package.json"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "jest",
