--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "intl-elements",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.1",
   "description": "Custom elements for using Intl APIs declaratively.",
   "author": "zacky@marchbox.com",
   "license": "MIT",
