refactor: base components on lit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,9 @@
     "noPropertyAccessFromIndexSignature": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "moduleResolution": "node",
+    "allowJs": true
   }
 }
