--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^29.2.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "lit": "^2.4.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
