--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "intl-elements",
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.1-alpha.4",
   "description": "Custom elements for using Intl APIs declaratively.",
   "author": "zacky@marchbox.com",
   "license": "MIT",
@@ -26,5 +26,8 @@
     "jest-environment-jsdom": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "lit": "^2.4.1"
   }
 }
