--- a/package.json
+++ b/package.json
@@ -16,16 +16,24 @@
     "package.json"
   ],
   "scripts": {
+    "dev": "run-p -r build:watch dev:server",
+    "dev:server": "run-s dev:server:wait dev:server:serve",
+    "dev:server:wait": "wait-on dist/index.js",
+    "dev:server:serve": "web-dev-server",
     "build": "tsc",
+    "build:watch": "tsc --watch",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@types/jest": "^29.2.2",
+    "@web/dev-server": "^0.1.35",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "npm-run-all": "^4.1.5",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "wait-on": "^6.0.1"
   },
   "dependencies": {
     "lit": "^2.4.1"
