--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,12 @@
     "strict": true,
     "lib": [
       "DOM",
-      "ES2022.Intl"
+      "ES2017.Intl",
+      "ES2018.Intl",
+      "ES2020.Intl",
+      "ES2021.Intl",
+      "ES2022.Intl",
+      "ESNext.Intl"
     ],
     "noImplicitAny": true,
     "strictNullChecks": true,
