refactor: make localeList read-only and validate options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,10 @@
       "ES2022.Intl",
       "ESNext.Intl"
     ],
+    "typeRoots": [
+      "node_modules/@types",
+      "./src/types.d.ts"
+    ],
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
