--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "package.json"
   ],
   "scripts": {
+    "prepare": "husky install",
     "dev": "run-p -r build:watch dev:server",
     "dev:server": "run-s dev:server:wait dev:server:serve",
     "dev:server:wait": "wait-on dist/index.js",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/jest": "^29.2.2",
     "@web/dev-server": "^0.1.35",
+    "husky": "^8.0.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "npm-run-all": "^4.1.5",
