--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   ],
   "exclude": [
     "src/**/*.spec.ts",
+    "src/testing/**/*",
     "node_modules"
   ],
   "compilerOptions": {
@@ -15,7 +16,16 @@
     "strict": true,
     "lib": [
       "DOM",
-      "ES2022.Intl"
+      "ES2017.Intl",
+      "ES2018.Intl",
+      "ES2020.Intl",
+      "ES2021.Intl",
+      "ES2022.Intl",
+      "ESNext.Intl"
+    ],
+    "typeRoots": [
+      "node_modules/@types",
+      "./src/types.d.ts"
     ],
     "noImplicitAny": true,
     "strictNullChecks": true,
