--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "0.0.1-alpha.6",
   "description": "Custom elements for using Intl APIs declaratively.",
   "author": "zacky@marchbox.com",
-  "license": "MIT",
+  "license": "ISC",
   "repository": {
     "type": "git",
     "url": "https://github.com/marchbox/intl-elements"
   },
+  "keywords": [
+    "intl",
+    "i18n",
+    "custom elements",
+    "web components"
+  ],
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
