--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,7 @@
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
-    "allowJs": true
+    "allowJs": true,
+    "useDefineForClassFields": false
   }
 }
