--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "test:watch": "jest --watch --no-coverage"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/jest": "^29.2.2",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@web/dev-server": "^0.1.35",
     "husky": "^8.0.0",
     "jest": "^29.3.1",
