test: fix intl-displaynames tests

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "test:watch": "jest --watch --no-coverage"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/jest": "^29.2.2",
     "@types/testing-library__jest-dom": "^5.14.5",
