build: fix dev workflow and demo

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prepare": "husky install",
     "dev": "run-p -r build:watch dev:server",
     "dev:server": "run-s dev:server:wait dev:server:serve",
-    "dev:server:wait": "wait-on dist/index.js",
+    "dev:server:wait": "wait-on dist/src/index.js",
     "dev:server:serve": "web-dev-server",
     "build": "rm -rf dist && tsc && rm dist/jest-setup.* && rm -rf dist/src/testing",
     "build:watch": "tsc --watch",
