--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
   ],
   "exclude": [
     "src/**/*.spec.ts",
-    "src/testing/**/*",
+    "src/testing/**/*"
   ],
   "compilerOptions": {
     "target": "es2015",
