--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "husky": "^8.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "jest-extended": "^3.2.0",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4",
