--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "jest-extended": "^3.2.0",
+    "jest-ts-webcompat-resolver": "^1.0.0",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4",
