--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "dev:server": "run-s dev:server:wait dev:server:serve",
     "dev:server:wait": "wait-on dist/index.js",
     "dev:server:serve": "web-dev-server",
-    "build": "rm -rf dist && tsc --project tsconfig.prod.json",
+    "build": "rm -rf dist && tsc --project tsconfig.prod.json && yarn docs",
     "build:watch": "tsc --watch",
-    "build:docs": "cem analyze",
+    "docs": "run-s docs:manifest docs:readme",
+    "docs:manifest": "cem analyze",
+    "docs:readme": "node ./scripts/build-readmes/index.js",
     "test": "jest",
     "test:watch": "jest --watch --no-coverage"
   },
@@ -51,6 +53,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "jest-extended": "^3.2.0",
     "jest-ts-webcompat-resolver": "^1.0.0",
+    "markdown-table": "^3.0.3",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4",
