--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/jest": "^29.2.2",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@web/dev-server": "^0.1.35",
+    "html-format": "^1.0.2",
     "husky": "^8.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
