--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "allowJs": true,
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "removeComments": true
   }
 }
