--- a/package.json
+++ b/package.json
@@ -39,15 +39,18 @@
     "docs:manifest": "cem analyze",
     "docs:readme": "node ./scripts/build-readmes/index.js",
     "test": "jest",
-    "test:watch": "jest --watch --no-coverage"
+    "test:watch": "jest --watch --no-coverage",
+    "test:browserstack": "export $(cat .env | xargs) && browserstack-node-sdk jest"
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.6.6",
-    "@testing-library/dom": "^8.19.0",
+    "@testing-library/dom": "^8.19.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@types/jest": "^29.2.2",
+    "@types/jest": "^29.2.5",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@web/dev-server": "^0.1.35",
+    "browserstack-node-sdk": "^1.4.1",
+    "dotenv": "^16.0.3",
     "html-format": "^1.0.2",
     "husky": "^8.0.0",
     "jest": "^29.3.1",
@@ -56,11 +59,12 @@
     "jest-ts-webcompat-resolver": "^1.0.0",
     "markdown-table": "^3.0.3",
     "npm-run-all": "^4.1.5",
+    "selenium-webdriver": "^4.7.1",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4",
-    "wait-on": "^6.0.1"
+    "typescript": "^4.9.4",
+    "wait-on": "^7.0.1"
   },
   "dependencies": {
-    "lit": "^2.4.1"
+    "lit": "^2.5.0"
   }
 }
